Fixed carousel looking too small on mobile devices.

--- a/static/mefamily/assets/css/style.css
+++ b/static/mefamily/assets/css/style.css
@@ -380,6 +380,11 @@ h1, h2, h3, h4, h5, h6 {
 #hero .btn-get-started:hover {
   background: #007ed8;
 }
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 @media (max-width: 992px) {
   #hero {
     height: 100vh;
